# lingwiki

./: .gitignore  500_pages.txt  LICENSE  README.md  lingwiki.py  pyproject.toml  runtests  script.py  setup.py  stop_list.txt  wiki_demo.ipynb  wikidownloader.py  wikithreads.py
lingwiki/: [delete later] lingwiki.py  __init__.py  _core.py  _defaults.py  _network.py  _parse.py  _thread_targets.py  _threadpool.py  _utils.py  _worker_threads.py  core.py  defaults.py  lingwiki.py  test_lingwiki.py  threadpool.py  utils.py  wiki_downloader.py  wiki_threadfuncs.py
lingwiki/data/: wiki_lang_codes.txt
tests/: core_test.py  flow_test.py  test_lingwiki.py
tests/data/: en_massive.txt  en_urls.txt  ru_urls.txt
