[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lingwiki"
version = "0.0.1"
authors = [
  { name="Ivan Osorgin", email="igosorgin@edu.hse.ru" },
]
description = "Allows you to download parsed content of articles from wikipedia.org"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Affenmilchmann/lingwiki"
"Bug Tracker" = "https://github.com/Affenmilchmann/lingwiki/issues"